# chess

./: .gitignore  CMakeLists.txt
include/: Stopwatch.h  application.h  board.cpp  board.h  camera.h  chess_tester.h  debug_application.h  move_generator.cpp  move_generator.h  piece.h  renderer.h  window.h
src/: main_debug.cpp
src/shaders/: fragment.glsl  pieceFrag.glsl  pieceVert.glsl  vertex.glsl
